2006-07-19  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/__init__.py: added folder and file icons

2006-07-18  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/backend/init.py: added NotBranchError handling to branch()
    * olive/frontend/gtk/__init__.py: added OliveCommunication class
    * olive/frontend/gtk/branch.py: finished implementation of Branch window

2006-07-17  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive.glade: signals added + Branch dialog modifications
    * olive/frontend/gtk/branch.py: began to implement branching functionality
    * olive/frontend/gtk/*: fixes tabs and spaces
    * olive/frontend/gtk/dialog.py: some basic dialog stuff added
    * olive/frontend/gtk/handler.py: moved dialog stuff into dialog.py
    * olive/frontend/gtk/__init__.py: added Status column to filelist
    * olive/backend/fileops.py: implemented status()
    * TODO: added a TODO list
    * setup.py: some tweaks
    * olive-gtk: added main executable
    * olive/frontend/gtk/handler.py: signal handler class added (OliveHandler)
    * olive/frontend/gtk/__init__.py: main GTK class added (OliveGtk)
    * olive.glade: GTK UI description added (generated by Glade)
    * oliveicon2.png: icon added

2006-07-16  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/backend/ui.py: GtkUIFactory implementation
    * Done some directory reorganization.
    * setup.py: added some basic install script
    * Began to implement the GTK UI.

2006-07-08  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * backend/errors.py: added some exceptions related to diff() and log()
    * backend/info.py: implemented log()
    * backend/info.py: diff() works well with revnos
    * added e-mail address to copyright header

2006-07-07  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * I turned 20 today, so please forgive me for the short changelog :)

2006-07-06  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
