@@ -428,6 +428,7 @@
 		  <property name="fixed_height_mode">False</property>
 		  <property name="hover_selection">False</property>
 		  <property name="hover_expand">False</property>
+		  <signal name="row_activated" handler="on_treeview_right_row_activated" last_modification_time="Thu, 20 Jul 2006 11:31:38 GMT"/>
 		</widget>
 	      </child>
 	    </widget>
